# yelloow-bootstrap-app

./: .config  .env-example  .gitignore  .gitmodules  Dockerfile  Dockerfile.db  Makefile  db_init.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  on_startup.sh  pyproject.toml  readme.md  seed_date_dimension_table.py
alembic/: env.py
src/yelloow_app/app/: yelloow_app.py
src/yelloow_app/app/controllers/: __init__.py  kpi_controller.py
src/yelloow_app/kpis/: __init__.py  kpi.py
src/yelloow_app/kpis/interfaces/: __init__.py  ikpi.py
src/yelloow_app/shared/: __init__.py
src/yelloow_app/shared/config/: config.py
src/yelloow_app/shared/database/: __init__.py  database.py
src/yelloow_app/shared/log/: log.py
